# zylith

./: .gitignore  LICENSE  README.md  Scarb.toml
circuits/: clmm_step.circom  membership.circom  note_commitments.circom  package-lock.json  package.json  poseidon.circom  private_deposit.circom  private_liquidity.circom  private_swap.circom  private_swap_exact_out.circom  private_swap_exact_out_one_for_zero.circom  private_swap_exact_out_zero_for_one.circom  private_swap_one_for_zero.circom  private_swap_zero_for_one.circom  private_withdraw.circom
circuits/constants/: generated.circom
circuits/math/: bigint.circom
circuits/test/: clmm_step.test.js  membership.test.js  private_liquidity.test.js  private_swap.test.js  private_swap_exact_out.test.js  utils.js
contracts/: components.cairo  core.cairo  interfaces.cairo  lib.cairo  math.cairo  privacy.cairo  types.cairo
contracts/clmm/: LICENSE  core.cairo  lib.cairo  tests.cairo
contracts/core/: PoolAdapter.cairo  ZylithPool.cairo  zylith_pool_liquidity.cairo  zylith_pool_liquidity.rs  zylith_pool_swap.cairo  zylith_pool_swap.rs
contracts/interfaces/: IERC20.cairo  IVerifier.cairo  (+1 more)
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
rust/asp/: Cargo.toml  config.toml
rust/asp/src/: events.rs  generated_constants.rs  main.rs  merkle.rs  storage.rs
rust/backend/: Cargo.toml  config.toml
rust/backend/src/: main.rs
rust/client/: Cargo.toml  build.rs
rust/client/src/: client.rs  deposit.rs  error.rs  generated_constants.rs  lib.rs  liquidity.rs  notes.rs  proofs.rs  swap.rs  utils.rs  withdraw.rs
rust/client/tests/: e2e.rs
rust/prover/: Cargo.toml
rust/prover/src/: error.rs  garaga_converter.rs  lib.rs  proof_runner.rs  snarkjs.rs  starknet_types.rs  witness.rs
rust/prover/tests/: prover_pipeline.rs
src/: clmm  clmm.cairo  components.cairo  core  core.cairo  interfaces.cairo  lib.cairo  math.cairo  privacy  privacy.cairo  tests  tests.cairo  types.cairo
tests/: common.cairo  test_integration.cairo  test_liquidity.cairo  test_merkle.cairo  test_pool.cairo  test_shielded_notes.cairo  test_swap.cairo  test_verifier_integration.cairo
(+97 files in other folders)
