[package]
name = "zylith-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
starknet = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
starknet-crypto = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }
chacha20poly1305 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
zylith-prover = { path = "../prover" }
clap = { version = "4", features = ["derive"] }
url = "2"

[patch.crates-io]
size-of = { path = "../prover/vendor/size-of" }
