[package]
name = "zylith-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
num-bigint = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[patch.crates-io]
size-of = { path = "vendor/size-of" }
